recommendation section dark mode added and some fixes

--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,37 @@
 .dark .expo .slick-dots .slick-active button {
   background: white;
 }
+
+
+
+/*----------------Recomendation css------- */
+
+
+.reco {
+  position: relative;
+}
+
+.reco .slick-dots {
+  display: flex !important;
+  gap: 12px;
+  position: absolute;
+  bottom: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.reco .slick-dots li button {
+  font-size: 0;
+  width: 8px;
+  height: 8px;
+  background: var(--color-secoundary);
+  border-radius: 50%;
+}
+
+.reco .slick-dots .slick-active button {
+  background: #111827;
+}
+
+.dark .reco .slick-dots .slick-active button {
+  background: white;
+}
